# VLA-World-Model

./: .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt
configs/: default.yaml
scripts/: download_data_hf.py  eval_dreaming.py  precompute_embeddings.py  run_eval.slurm  run_policy.slurm  run_preprocessing.slurm  run_rollout.slurm  run_train.slurm  run_vla.slurm  run_vla_rollout.slurm  train_policy.py  train_world_model.py
src/: config.py
src/datasets/: __init__.py  vla_dataset.py
src/models/: policy.py  vla_llm_policy.py  world_model.py
src/training/: download_data_hf.py  eval_dreaming.py  eval_policy_rollout.py  eval_vla_rollout.py  precompute_embeddings.py  train_policy.py  train_vla_policy.py  train_world_model.py
tests/: test_models.py
vla_world_model.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
