[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vla_world_model"
version = "0.1.0"
description = "Modular VLA: Interpretable World Models for Safe Robotic Control"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Daniel Fernández de la Mela", email = "daniel.fernandezdelamela@student-cs.fr" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "torch",
    "torchvision",
    "h5py",
    "pyyaml",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
    "flake8"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[project.scripts]
vla-train = "src.training.train_world_model:main"
vla-eval = "src.training.eval_dreaming:main"
vla-policy = "src.training.train_policy:main"
vla-preprocess = "src.training.precompute_embeddings:main"
vla-download = "src.training.download_data_hf:main"
vla-rollout = "src.training.eval_policy_rollout:main"
vla-train-llm = "src.training.train_vla_policy:main"
